--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Layout from "../layouts/Layout.astro";
       <p>
         My name is Jip Lucy Mieras and I was born <span id="dateDifference"
         ></span> days ago on January 30th, 2023 to proud parents, Maarten and
-        Willemijn.
+        Willemijn...
       </p>
       <p>
         I am so excited to explore this new world and I can't wait to meet you
