--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,6 +34,7 @@ import Layout from "../layouts/Layout.astro";
   main {
     display: grid;
     grid-template-rows: 50vh auto;
+    grid-template-columns: auto;
     align-items: stretch;
     min-height: 100%;
     padding: 1rem;
@@ -96,9 +97,10 @@ import Layout from "../layouts/Layout.astro";
     background-color: var(--clr-canvas);
   }
 
-  @media only screen and (min-width: 600px) {
+  @media only screen and (min-width: 768px) {
     main {
       grid-template-columns: 2fr 1fr;
+      grid-template-rows: none;
       align-items: stretch;
       height: 100%;
       padding: 4vw 4vw 4vw 4vw;
