--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,6 +47,11 @@ import Layout from "../layouts/Layout.astro";
     background: var(--clr-canvas);
   }
 
+  /* .matter canvas {
+    width: 100%;
+    height: 100%;
+  } */
+
   .content {
     background: var(--clr-content);
     padding: 3vw;
