--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,13 +38,14 @@ import Layout from "../layouts/Layout.astro";
     align-items: stretch;
     min-height: 100%;
     padding: 1rem;
-    border-radius: var(--br-panel);
+
     overflow: hidden;
   }
 
   .wrap {
     overflow: hidden;
     background: var(--clr-canvas);
+    border-radius: 1rem 1rem 0 0;
   }
 
   /* .matter canvas {
@@ -56,6 +57,7 @@ import Layout from "../layouts/Layout.astro";
     background: var(--clr-content);
     padding: 3vw;
     z-index: 2;
+    border-radius: 0 0 1rem 1rem;
   }
 
   /* backgrounds */
